<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:override="true">Beacon Administration</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="beacons">Beacons</string>
    <string name="network_problems">Network Problems</string>
    <string name="disturbances">Disturbances</string>
    <string name="issues">Issues</string>
    <string name="issue">Issue</string>
    <string name="ok">OK</string>
    <string name="cancel" tools:override="true">Cancel</string>
    <string name="about">About</string>
    <string name="all">All</string>
    <string name="nearby">Nearby</string>
    <string name="login">Login</string>
    <string name="logged_in">Logged in again successfully</string>
    <string name="logout">Logout</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="empty_list">No data found</string>
    <string name="about_title">Beacon South Tyrol</string>
    <string name="about_text">Networking the Land. Creating Ideas. We are building the first beacon network in South Tyrol and a community of experts and companies.
        Because the time for Internet of Things is now.\n\n
        1 - Project Management\n
This work package includes all the activities that are needed to guarantee the correct implementation of all the foreseen activities.\n\n
2 - Communication and community building\n
This work package will include a lot of activities. The main goal is creation of a south tyrolean community of IoT companies, experts and talents that will stimulate new innovative ideas, projects, products and services.
\n\n
3 - State of the art analysis\n
This work package shows the state of the art analysis of the IoT sector which will identify:\n
The best technologies in the IoT sector and how can be integrated;
A vision about future technologies that will come in the near future;
An analysis of project and companies that will use or benefit from Beacon and IoT technologies in South Tyrol;
A vision of possible future development of the project activities.\n\n
4 - Beacon Network\n
This work package includes:\n
Installation of 3.500 issues distributed over the whole South Tyrol;
Development of an Open Source library that can be used by stakeholders which will interact with installed issues;
Development of an Open Source web tool to manage the beacon network;
Development of an Open source app to manage the beacon network;
Creation of a plan for the maintenance and the future development of the beacon network.\n\n
5 - Wireless Sensor Network\n
This work package includes:\n
Installation of a LoRaWAN testing network at the NOI techpark;
Creation of a local IoT Community of local, national and international research institutions, companies and experts;
Development of an Open Source web tool to manage the network.\n\n
6 - Pilots implementation\n
This work package aims to develop Open Source pilot services and applications that anyone can use as a reference implementation.
    </string>
    <string name="location_permission_title">Location permission needed</string>
    <string name="location_permission_message">The permission to use location services is needed to indicate your current position on the map, and to show nearby beacons.</string>
    <string name="location_disabled_message">The location is disabled. Please retry and grant the permission to reload the map.</string>
    <string name="reload_map">Reload map</string>
    <string name="retry">Retry</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="details_last_seen">Last seen: %s</string>
    <string name="last_seen">Last seen</string>
    <string name="last_updated">Last updated</string>
    <string name="percent">%d %%</string>
    <string name="rssi">Signal strength: %d dB</string>
    <string name="degree">%d °C</string>
    <string name="major_format">Major: %d</string>
    <string name="minor_format">Minor: %d</string>
    <string name="lat">Latitude</string>
    <string name="lng">Longitude</string>
    <string name="details_edit">Edit</string>
    <string name="details_save">Save</string>
    <string name="saved">Saved successfully</string>
    <string name="details_delete">Delete</string>
    <string name="details_section_config">Beacon Config</string>
    <string name="details_section_address">Address</string>
    <string name="details_section_location">Location</string>
    <string name="details_section_images">Images</string>
    <string name="images_empty">No images found</string>
    <string name="details_config">Config</string>
    <string name="details_config_major">Major</string>
    <string name="details_config_minor">Minor</string>
    <string name="details_config_signalstrength">Signal strength</string>
    <string name="details_config_signalinterval">Signal interval (ms)</string>
    <string name="details_config_namespace">Namespace</string>
    <string name="details_config_instanceid">InstanceId</string>
    <string name="details_config_url">URL</string>
    <string name="details_info_name">Name</string>
    <string name="details_info_battery">Battery</string>
    <string name="details_info_devicestatus">Device status</string>
    <string name="details_info_telemetry">Telemetry</string>
    <string name="details_info_temperature">Temperature</string>
    <string name="details_info">Info</string>
    <string name="details_ibeacon">iBeacon</string>
    <string name="details_eddystone">Eddystone</string>
    <string name="details_eddystone_eid">Eddystone Eid</string>
    <string name="details_eddystone_etlm">Eddystone Etlm</string>
    <string name="details_eddystone_tlm">Eddystone Tlm</string>
    <string name="details_eddystone_uid">Eddystone Uid</string>
    <string name="details_eddystone_url">Eddystone Url</string>
    <string name="details_map">Map</string>
    <string name="details_gps">GPS</string>
    <string name="current_position">Use current position</string>
    <string name="provisional_position">Use provisional position</string>
    <string name="position_not_available">The current position is not available. Please verify your settings and try again!</string>
    <string name="details_description">Description</string>
    <string name="details_floor">Floor</string>
    <string name="add_image">Add image</string>
    <string name="choose_source">Source for image</string>
    <string name="uploading">Uploading image. Please wait…</string>
    <string name="filter_beacons">Filter Beacons</string>
    <string name="filter_issues">Filter Issues</string>
    <string name="location_not_available">The current location is not available. It is needed to filter the issues by distance.</string>
    <string name="status_all">All</string>
    <string name="status_ok">OK</string>
    <string name="status_battery_low">Battery low</string>
    <string name="status_configuration_pending">Configuration pending</string>
    <string name="status_unknown_status">Unknown_status</string>
    <string name="status_not_accessible">Not accessible</string>
    <string name="status_issue">Issue(s) reported</string>
    <string name="status_installed">Installed</string>
    <string name="status_not_installed">Not installed</string>
    <string name="outdoor">outdoor</string>
    <string name="indoor">indoor</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_incorrect_login">Wrong username or password</string>
    <string name="error_field_required">Required field</string>
    <string name="error_authorization">Authorization expired. Please log in again!</string>
    <string name="error_forbidden">Something got wrong. Please reload to check permissions!</string>
    <string name="loading" tools:override="true">Loading…</string>
    <string name="saving">Saving changes…</string>
    <string name="saving_issue">Saving issue…</string>
    <string name="applying">Applying configuration to beacon…</string>
    <string name="deleting">Deleting image…</string>
    <string name="image_saved">Image saved</string>
    <string name="image_error">Image could not be saved</string>
    <string name="close_warning">Do you want to quit without saving?</string>
    <string name="delete_warning">Do you really want to delete this image?</string>
    <string name="warning">Warning</string>
    <string name="battery_warning">Modifying this parameter can negatively affect the duration of the battery!</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="no_internet">No internet connection detected!</string>
    <string name="general_error">An error occurred. Please try again!</string>
    <string name="error">Error</string>
    <string name="error_api_key_no_access_to_beacon">The beacon groups API key has no access to the beacon data.\n\nPlease contact the owner to share this beacon in the kontakt.io dashboard panel.</string>
    <string name="error_applying_failed">Applying configuration to beacon failed.</string>
    <string name="error_possible_api_key_no_access_to_beacon">Please retry or check if the beacon groups API key has access to the beacon data.\n\nIf it fails again, contact the owner to share this beacon in the kontakt.io dashboard panel.</string>
    <string name="show_pending_config">Show pending configuration</string>
    <string name="pending_config">Pending configuration</string>
    <string name="pending_config_empty">Pending configuration is empty</string>
    <string name="pending_config_info">In edit mode, the data from the pending configuration is shown to allow editing of the data to be written.</string>
    <string name="pending_config_reset">Reset pending configuration</string>
    <string name="reset_warning">Do you really want to reset the pending configuration?</string>
    <string name="really_apply_now">Do you really want to apply the pending configuration to the beacon now?</string>
    <string name="reset">Reset</string>
    <string name="quit">Quit</string>
    <string name="apply_now">Apply now</string>
    <string name="current_value">current</string>
    <string name="applied_successfully">Configuration applied successfully</string>
    <string name="new_value">new</string>
    <string name="error_connecting_to_beacon">Could not connect to beacon</string>
    <string name="error_writing_to_beacon">Could not write configuration to beacon</string>
    <string name="error_sending_to_cloud">Could not synchronize configuration</string>
    <string name="mandatory">Mandatory field</string>
    <string name="invalid_interval">Value must be between 100 and 10240</string>
    <string name="invalid_major_minor">Value must be between 0 and 65535</string>
    <string name="invalid_uuid">Invalid value for an UUID</string>
    <string name="invalid_coordinate">Invalid coordinates (not in South Tyrol)</string>
    <string name="problem_description">Problem description</string>
    <string name="new_issue">New Issue</string>
    <string name="resolve">Resolve</string>
    <string name="report">Report</string>
    <string name="problem">Problem</string>
    <string name="solution">Solution</string>
    <string name="solution_description">Solution Description</string>
    <string name="reporter">Reporter</string>
    <string name="date">Date</string>
    <string name="description_hint">short, clear description</string>
    <string name="rotate_90_right">Rotate 90° right</string>
    <string name="rotate_90_left">Rotate 90° left</string>
    <string name="open_website">Open Project Website</string>
    <string name="version">Version %s</string>
</resources>