<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/info_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundBox"
    android:orientation="vertical"
    android:padding="@dimen/app_default_margin">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_default_margin"
        android:layout_marginBottom="@dimen/app_default_margin"
        android:visibility="gone"
        app:hintTextAppearance="@style/TextAppearance.Hint"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/info_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/details_info_name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            tools:text="Beacon 12" />

    </com.google.android.material.textfield.TextInputLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:orientation="horizontal"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_columnWeight="1"
            android:text="@string/details_info_battery"
            android:gravity="center_vertical"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/info_battery"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:gravity="center_vertical|end"
            android:ellipsize="marquee"
            android:singleLine="true"
            tools:text="60 %" />

        <ImageView
            android:id="@+id/info_battery_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/nav_header_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_battery_50" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_columnSpan="3"
            android:background="@color/divider" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_columnWeight="1"
            android:gravity="center_vertical"
            android:text="@string/details_info_temperature"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/info_temperature"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:ellipsize="marquee"
            android:gravity="center_vertical|end"
            android:singleLine="true"
            android:text="-"
            tools:ignore="HardcodedText"
            tools:text="21 °C" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_columnSpan="3"
            android:background="@color/divider" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_columnWeight="1"
            android:gravity="center_vertical"
            android:text="@string/details_info_devicestatus"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/info_status"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:ellipsize="marquee"
            android:gravity="center_vertical|end"
            android:singleLine="true"
            android:textAllCaps="true"
            tools:text="OK" />

        <ImageView
            android:id="@+id/info_status_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/nav_header_desc"
            android:padding="6dp"
            android:tint="@color/status_ok"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_status" />

    </GridLayout>

    <com.appyvet.materialrangebar.RangeBar
        android:id="@+id/info_rangebar"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="@dimen/app_default_margin"
        android:padding="0dp"
        android:textColor="@android:color/white"
        app:mrb_connectingLineColor="@color/divider"
        app:mrb_pinColor="@color/primary"
        app:mrb_pinMaxFont="14sp"
        app:mrb_pinMinFont="14sp"
        app:mrb_pinPadding="8dp"
        app:mrb_pinRadius="16dp"
        app:mrb_rangeBar="false"
        app:mrb_selectorColor="@color/primary"
        app:mrb_temporaryPins="false"
        app:mrb_tickColor="@color/divider"
        app:mrb_tickEnd="7"
        app:mrb_tickInterval="1"
        app:mrb_tickStart="1" />

    <TextView
        android:id="@+id/signal_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/details_config_signalstrength"
        android:textColor="@color/secondaryText"
        android:textSize="14sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/intervalContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_default_margin"
        android:layout_marginBottom="@dimen/app_default_margin"
        app:hintTextAppearance="@style/TextAppearance.Hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/info_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/details_config_signalinterval"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            tools:text="100" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/info_telemetry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_info_telemetry"
        android:theme="@style/SwitchTheme" />

</LinearLayout>