<?xml version="1.0" encoding="utf-8"?>

<!--
SPDX-FileCopyrightText: NOI Techpark <digital@noi.bz.it>

SPDX-License-Identifier: CC0-1.0
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gps_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundBox"
    android:minHeight="300dp"
    android:orientation="vertical"
    android:padding="@dimen/app_default_margin"
    android:visibility="gone"
    tools:visibility="visible">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/latitudeContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gps_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/lat"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLength="9"
            android:maxLines="1"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            tools:ignore="HardcodedText"
            tools:text="46.49765" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/longitudeContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gps_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/lng"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:maxLength="9"
            android:maxLines="1"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            tools:ignore="HardcodedText"
            tools:text="11.35494" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/gps_current_position"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_marginTop="@dimen/app_default_margin"
        android:textColor="@color/primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/current_position" />

    <Button
        android:id="@+id/gps_provisional_position"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textColor="@color/primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/provisional_position" />
</LinearLayout>
